<resources>
    <string name="app_name">Contact</string>
    <string name="save">Save</string>
    <string name="phone_number">Phone number</string>
    <string name="name">Name</string>
    <string name="delete_image">Delete image</string>
    <string name="chat_image">Chat image</string>
    <string name="example_name">Dipo</string>
    <string name="update">Update</string>
    <string name="example_number">082145888256</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_add_contact">Button add contact</string>
    <string name="edit_fragment">Edit Contact</string>
    <string name="add_fragment">Add Contact</string>
    <string name="all_blank">Please fill all blank form</string>
    <string name="name_blank">Please fill name form</string>
    <string name="phone_blank">Please fill phone form</string>
</resources>