<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/extra_small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginBottom="@dimen/extra_small_margin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_margin">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.7" />

            <TextView
                android:id="@+id/textName"
                android:layout_width="@dimen/match_constraint"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:maxLines="1"
                android:textSize="@dimen/text_name_size"
                app:layout_constraintBottom_toTopOf="@id/textNumber"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="@string/example_name" />

            <TextView
                android:id="@+id/textNumber"
                android:layout_width="@dimen/match_constraint"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_margin"
                android:textSize="@dimen/text_number_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textName"
                tools:text="@string/example_number" />

            <ImageView
                android:id="@+id/iconDelete"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/small_margin"
                android:padding="@dimen/small_margin"
                android:contentDescription="@string/delete_image"
                app:layout_constraintBottom_toBottomOf="@id/textNumber"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toEndOf="@+id/iconWhatsApp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/textName"
                app:srcCompat="@drawable/trash" />

            <ImageView
                android:id="@+id/iconWhatsApp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/small_margin"
                android:padding="@dimen/small_margin"
                android:contentDescription="@string/chat_image"
                app:layout_constraintBottom_toBottomOf="@id/textNumber"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintEnd_toStartOf="@+id/iconDelete"
                app:layout_constraintTop_toTopOf="@id/textName"
                app:srcCompat="@drawable/chat" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>